src/tests/fixtures/field_definitions/MethodFieldMissingType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
class Query {
  /** @GQLField */
  someMethodField() {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/MethodFieldMissingType.invalid.ts:4:3 - error: Expected GraphQL field to have a type.

4   someMethodField() {
    ~~~~~~~~~~~~~~~
